Yasm Refined code.

--- a/program.htm
+++ b/program.htm
@@ -76,11 +76,12 @@
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
   <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
+  <a href="#yasm"><img src="img/photos/yasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Yasm
   <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)
+  <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
 "/></a>
   <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
   <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
-  <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="HLA"/></a>
   <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
   <a href="#sfml"><img src="img/photos/sfml.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SFML"/></a>
   <a href="#python"><img src="img/photos/python.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Python"/></a>
@@ -367,6 +368,54 @@ Flat Assembler (FASM)</h3>
   hello, world! (int 0x80)</a><br>
 <br><br><br><br>
 
+<div id="yasm"></div>
+<h3><img src="img/photos/yasm.jpg" class="floatLeft"/>
+Yasm</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Assembly (x86)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_hello_gs.htm">
+  hello, world! (gs)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_hello_printf.htm">
+  hello, world! (printf)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_hello_sysenter.htm">
+  hello, world! (sysenter)</a><br>
+
+&oplus;
+<b>Assembly (x64)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x86_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x64_hello_printf.htm">
+  hello, world! (printf)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x64_hello_syscall.htm">
+  hello, world! (syscall)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/yasm/x64_hello_int80.htm">
+  hello, world! (int 0x80)</a><br>
+<br><br><br><br>
+
 <div id="nasm"></div>
 <h3><img src="img/photos/nasm.jpg" class="floatLeft"/>
 Netwide Assembler (NASM)</h3>
@@ -429,6 +478,23 @@ Netwide Assembler (NASM)</h3>
 &lowast;
 <a href="program/nasm/fix_start-group.htm">
 解決"undefined reference to dl_iterate_phdr"問題</a><br>
+<br><br><br><br>
+
+<div id="hla"></div>
+<h3><img src="img/photos/hla.jpg" class="floatLeft"/>
+High Level Assembly (HLA)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>Assembly (x64)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/hla/x64_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/hla/x64_hello.htm">
+  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="rust"></div>
@@ -507,23 +573,6 @@ MASM32</h3>
   &emsp;&emsp;&lowast;
   <a href="program/masm32/x86_hello.htm">
   Hello, world!</a><br>
-<br><br><br><br>
-
-<div id="hla"></div>
-<h3><img src="img/photos/hla.jpg" class="floatLeft"/>
-HLA</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="program/hla/setup.htm">
-開發環境</a><br>
-
-&oplus;
-<b>Assembly (x64)</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="program/hla/x64_hello.htm">
-  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="sdl"></div>
