--- a/program/fasm/arm_hello_swi_eabi.htm
+++ b/program/fasm/arm_hello_swi_eabi.htm
@@ -58,19 +58,20 @@ main.s
 <pre class="brush:asm">
     format elf executable 3
     entry start
-
+    
     segment readable executable
 start:
     mov r7, 4
     mov r0, 1
-    adr r1, msg
+    mov r1, msg
     mov r2, len
     swi 0
-
+ 
     mov r7, 1
     mov r0, 0
     swi 0
 
+    segment readable writeable
 msg: db "hello, world!", 10
 len = $ - msg
 </pre><br>
