--- a/program/fasm/arm_hello_swi_oabi.htm
+++ b/program/fasm/arm_hello_swi_oabi.htm
@@ -61,17 +61,18 @@ main.s
 <pre class="brush:asm">
     format elf executable 3
     entry start
-
+ 
     segment readable executable
 start:
     mov r0, 1
-    adr r1, msg
+    mov r1, msg
     mov r2, len
     swi 0x900004
-
+ 
     mov r0, 0
     swi 0x900001
 
+    segment readable writeable
 msg: db "hello, world!", 10
 len = $ - msg
 </pre><br>
