--- a/program/hla/x64_hello.htm
+++ b/program/hla/x64_hello.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>HLA &gt;&gt; Assembly (x64)</h3>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x64)</h3>
 <p><b>hello, world!</b></p>
 <hr size="1">
 <p>
@@ -63,9 +63,9 @@ end hello;
 編譯、執行
 </p>
 <pre>
-$ export PATH=$PATH:/opt/hla/usr/hla/
-$ export hlalib=/opt/hla/usr/hla/hlalib/
-$ export hlainc=/opt/hla/usr/hla/include/
+$ export PATH=$PATH:/opt/hla/
+$ export hlalib=/opt/hla/hlalib/
+$ export hlainc=/opt/hla/include/
 $ hla main
 $ ./main
   hello, world!
