--- a/program/hla/x64_setup.htm
+++ b/program/hla/x64_setup.htm
@@ -44,17 +44,20 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x64)</h3>
 <p><b>安装環境</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://www.nasm.us/">nasm</a><br><br>
+參考網站：<br>
+1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/LInuxDownload.html">HighLevelAsm</a><br><br>
 
 步驟如下：
 </p>
 <pre>
-$ sudo apt-get install nasm -y
+$ cd
+$ wget https://www.plantation-productions.com/Webster/HighLevelAsm/HLAv2.16/linux64.hla.tar.gz
+$ tar xvf linux64.hla.tar.gz
+$ sudo mv usr/hla /opt/
 </pre><br>
 
 <p>
