--- a/program/yasm/x64_hello_int80.htm
+++ b/program/yasm/x64_hello_int80.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,17 +44,49 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
-<p><b>安装環境</b></p>
+<h3>Yasm &gt;&gt; Assembly (x64)</h3>
+<p><b>hello, world! (int 0x80)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.nasm.us/">nasm</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br><br>
 
-步驟如下：
+main.s
+</p>
+<pre class="brush:asm">
+    global _start
+
+    section .data
+msg: db "hello, world!", 10
+len: equ $ - msg
+
+    section .text
+_start:
+    mov rax, 1
+    mov rbx, 1
+    mov rcx, msg
+    mov rdx, len
+    int 0x80
+     
+    mov rax, 60
+    mov rbx, 0
+    int 0x80
+</pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>rax</th><th>arg0(rbx)</th><th>arg1(rcx)</th><th>arg2(rdx)</th></tr>
+<tr><td>1</td><td>write</td><td>1</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+<tr><td>60</td><td>exit</td><td>60</td><td>int error_code</td><td></td><td></td></tr>
+</table><br>
+
+<p>
+編譯、執行
 </p>
 <pre>
-$ sudo apt-get install nasm -y
+$ yasm -f elf64 main.s
+$ x86_64-linux-gnu-gcc main.o -o main -nostdlib -static
+$ qemu-x86_64 ./main
+    hello, world!
 </pre><br>
 
 <p>
