--- a/program/yasm/x86_hello_gs.htm
+++ b/program/yasm/x86_hello_gs.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,17 +44,51 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
-<p><b>安装環境</b></p>
+<h3>Yasm &gt;&gt; Assembly (x86)</h3>
+<p><b>hello, world! (gs)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.nasm.us/">nasm</a><br><br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
+2. <a href="https://reverseengineering.stackexchange.com/questions/2869/how-to-use-sysenter-under-linux">how-to-use-sysenter-under-linux</a><br>
+3. <a href="https://stackoverflow.com/questions/41690592/what-does-gs0x10-do-in-assembler">what-does-gs0x10-do-in-assembler</a><br><br>
 
-步驟如下：
+main.s
+</p>
+<pre class="brush:asm">
+    global main
+  
+    section .data
+msg: db "hello, world!", 10
+len: equ $ - msg
+  
+    section .text
+main:
+    mov eax, 4
+    mov ebx, 1
+    mov ecx, msg
+    mov edx, len
+    call [gs:0x10]
+    
+    mov eax, 1
+    mov ebx, 0
+    call [gs:0x10]
+</pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
+編譯、執行
 </p>
 <pre>
-$ sudo apt-get install nasm -y
+$ yasm -f elf32 main.s
+$ i686-linux-gnu-gcc main.o -o main -static
+$ qemu-i386 ./main
+    hello, world!
 </pre><br>
 
 <p>
