--- a/program/yasm/x86_hello_int80.htm
+++ b/program/yasm/x86_hello_int80.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,21 +44,50 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>HLA</h3>
-<p><b>安装環境</b></p>
+<h3>Yasm &gt;&gt; Assembly (x86)</h3>
+<p><b>hello, world! (int 0x80)</b></p>
 <hr size="1">
 <p>
-參考網站：<br>
-1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/LInuxDownload.html">HighLevelAsm</a><br><br>
+參考資訊：<br>
+1. <a href="https://chromium.googlesource.com/chromiumos/docs/+/HEAD/constants/syscalls.md">syscall</a><br>
+2. <a href="https://tldp.org/HOWTO/Assembly-HOWTO/hello.html">Assembly-HOWTO</a><br><br>
 
-步驟如下：
+main.s
+</p>
+<pre class="brush:asm">
+    global _start
+
+    section .data
+msg: db "hello, world!", 10
+len: equ $ - msg
+   
+    section .text
+_start:
+    mov eax, 4
+    mov ebx, 1
+    mov ecx, msg
+    mov edx, len
+    int 80h
+ 
+    mov eax, 1
+    mov ebx, 0
+    int 80h 
+</pre><br>
+
+<table>
+<tr><th>NR</th><th>syscall name</th><th>eax</th><th>arg0(ebx)</th><th>arg1(ecx)</th><th>arg2(edx)</th></tr>
+<tr><td>1</td><td>exit</td><td>1</td><td>int error_code</td><td></td><td></td></tr>
+<tr><td>4</td><td>write</td><td>4</td><td>unsigned int fd</td><td>const char *buf</td><td>size_t count</td></tr>
+</table><br>
+
+<p>
+編譯、執行
 </p>
 <pre>
-$ cd
-$ wget https://www.plantation-productions.com/Webster/HighLevelAsm/HLAv2.16/linux64.hla.tar.gz
-$ tar xvf linux64.hla.tar.gz
-$ sudo mkdir /opt/hla
-$ sudo mv usr /opt/hla
+$ yasm -f elf32 main.s
+$ i686-linux-gnu-gcc main.o -o main -static -nostdlib
+$ qemu-i386 ./main
+    hello, world!
 </pre><br>
 
 <p>
