--- a/program/yasm/x86_setup.htm
+++ b/program/yasm/x86_setup.htm
@@ -44,17 +44,17 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86)</h3>
+<h3>Yasm &gt;&gt; Assembly (x86)</h3>
 <p><b>安装環境</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.nasm.us/">nasm</a><br><br>
+1. <a href="https://yasm.tortall.net/">yasm</a><br><br>
 
 步驟如下：
 </p>
 <pre>
-$ sudo apt-get install nasm -y
+$ sudo apt-get install yasm -y
 </pre><br>
 
 <p>
