--- a/program.htm
+++ b/program.htm
@@ -76,12 +76,11 @@
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
   <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
-  <a href="#jwasm"><img src="img/photos/jwasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="JWasm
-  <a href="#yasm"><img src="img/photos/yasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Yasm
-  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)
+  <a href="#jwasm"><img src="img/photos/jwasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="JWasm"/></a>
+  <a href="#yasm"><img src="img/photos/yasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Yasm"/></a>
+  <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)"/></a>
   <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="High Level Assembly(HLA)"/></a>
   <a href="#sasm"><img src="img/photos/sasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SimpleASM (SASM)"/></a>
-"/></a>
   <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
   <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
   <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
