GNU How to prepare environment.

--- a/program.htm
+++ b/program.htm
@@ -113,6 +113,10 @@ GNU</h3>
 
 &oplus;
 <b>C/C++</b><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_setup.htm">
+  開發環境</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_hello.htm">
@@ -206,6 +210,10 @@ GNU</h3>
 <b>Assembly (ARM)</b><br>
   
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/arm_hello_printf.htm">
   hello, world! (printf)</a><br>
 
@@ -221,6 +229,10 @@ GNU</h3>
 <b>Assembly (ARM 64)</b><br>
   
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/arm64_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/arm64_hello_svc.htm">
   hello, world! (svc)</a><br>
 
@@ -231,6 +243,10 @@ GNU</h3>
 &oplus;
 <b>Assembly (MIPSEL)</b><br>
   
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/mipsel_setup.htm">
+  開發環境</a><br>
+
   &emsp;&emsp;&lowast;
   <a href="program/gnu/mipsel_hello_printf.htm">
   hello, world! (printf)</a><br>
@@ -243,6 +259,10 @@ GNU</h3>
 <b>Assembly (RISC-V 64)</b><br>
   
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/riscv64_setup.htm">
+  開發環境</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/riscv64_hello_ecall.htm">
   hello, world! (ecall)</a><br>
 
@@ -252,6 +272,10 @@ GNU</h3>
 
 &oplus;
 <b>Assembly (x86)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/x86_setup.htm">
+  開發環境</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x86_hello_gs.htm">
@@ -271,6 +295,10 @@ GNU</h3>
 
 &oplus;
 <b>Assembly (x64)</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/x64_setup.htm">
+  開發環境</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/x64_hello_printf.htm">
