FASM Refined code.

--- a/program/fasm/x86_hello_int80.htm
+++ b/program/fasm/x86_hello_int80.htm
@@ -58,20 +58,22 @@ main.s
 <pre class="brush:asm">
     format elf executable 3
     entry start
-    
+
+    segment readable writeable
 msg: db "hello, world!", 10
 len = $ - msg
 
+    segment readable executable
 start:
-	mov	eax, 4
-	mov	ebx, 1
-	mov	ecx, msg
-	mov	edx, len
-	int	0x80
-
-	mov	eax, 1
-	xor	ebx, ebx
-	int	0x80
+    mov eax, 4
+    mov ebx, 1
+    mov ecx, msg
+    mov edx, len
+    int 0x80
+ 
+    mov eax, 1
+    xor ebx, ebx
+    int 0x80
 </pre><br>
 
 <table>
