Wine A hello example in wine.

--- a/program.htm
+++ b/program.htm
@@ -75,6 +75,7 @@
 <br><br>
 <p>
   <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
+  <a href="#wine"><img src="img/photos/wine.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wine"/></a>
   <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
   <a href="#jwasm"><img src="img/photos/jwasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="JWasm"/></a>
   <a href="#yasm"><img src="img/photos/yasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Yasm"/></a>
@@ -361,6 +362,23 @@ int 0x80、sysenter、syscall</a><br>
 解決"undefined reference to __gmpn_invert_limb"問題</a>
 <br><br><br><br>
 
+<div id="wine"></div>
+<h3><img src="img/photos/wine.jpg" class="floatLeft"/>
+Wine</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/wine/cpp_setup.htm">
+  開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="program/wine/cpp_hello.htm">
+  hello, world!</a><br>
+<br><br><br><br>
+  
 <div id="fasm"></div>
 <h3><img src="img/photos/fasm.jpg" class="floatLeft"/>
 Flat Assembler (FASM)</h3>
