Wine Refined code.

--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -49,8 +49,17 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="http://www.winprog.org/tutorial/start.html">start</a><br><br>
+1. <a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/nf-winuser-messagebox">msdn</a><br>
+2. <a href="http://www.winprog.org/tutorial/start.html">start</a><br><br>
 
+說明：
+</p>
+<table>
+<tr><th>API</th></tr>
+<tr><td>int MessageBox(HWND hWnd, LPCTSTR lpText, LPCTSTR lpCaption, UINT uType);</td></tr>
+</table><br>
+
+<p>
 main.c
 </p>
 <pre class="brush:cpp">
