Wine Refined code.

--- a/program.htm
+++ b/program.htm
@@ -368,15 +368,18 @@ Wine</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-<b>C/C++</b><br>
+<b>Win32 API</b><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="program/wine/cpp_setup.htm">
-  開發環境</a><br>
+  &emsp;&emsp;&oplus;
+  C/C++<br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/wine/cpp_setup.htm">
+    開發環境</a><br>
   
-  &emsp;&emsp;&lowast;
-  <a href="program/wine/cpp_hello.htm">
-  hello, world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/wine/cpp_hello.htm">
+    hello, world!</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
