--- a/program/wine/cpp_setup.htm
+++ b/program/wine/cpp_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; Win32 API &gt;&gt; C/C++</h3>
+<h3>Wine &gt;&gt; C/C++</h3>
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
