Wine How to create a simple window for dialog.

--- a/program.htm
+++ b/program.htm
@@ -376,7 +376,7 @@ Wine</h3>
   
     &emsp;&emsp;&lowast;
     <a href="program/wine/arm64_hello.htm">
-    hello, world!</a><br>
+    Hello, world!</a><br>
   
   &oplus;
   <b>C/C++</b><br>
@@ -387,7 +387,15 @@ Wine</h3>
   
     &emsp;&emsp;&lowast;
     <a href="program/wine/cpp_hello.htm">
-    hello, world!</a><br>
+    Hello, world!</a><br>
+  
+      &emsp;&emsp;&oplus;
+      Dialog<br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_window.htm">
+        Create Window</a><br>
+  
 <br><br><br><br>
   
 <div id="fasm"></div>
