--- a/program/wine/arm64_hello.htm
+++ b/program/wine/arm64_hello.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; Assembly (ARM 64)</h3>
-<p><b>hello, world!</b></p>
+<p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -68,7 +68,7 @@ main.s
 
     .data
 title: .asciz "main"
-content: .asciz "hello, world!"
+content: .asciz "Hello, world!"
 
     .text
 WinMain:
