--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++</h3>
-<p><b>hello, world!</b></p>
+<p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -68,7 +68,7 @@ main.c
 int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
                    LPSTR lpCmdLine, int nCmdShow)
 {
-    MessageBox(NULL, "hello, world!", "main", MB_OK);
+    MessageBox(NULL, "Hello, world!", "main", MB_OK);
     return 0;
 }
 </pre><br>
