Wine Refined code.

--- a/program/wine/cpp_dlg_window.htm
+++ b/program/wine/cpp_dlg_window.htm
@@ -104,7 +104,7 @@ $ wine ./main.exe
 int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
                    LPSTR lpCmdLine, int nCmdShow)
 {
-    CreateWindowA(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 
+    CreateWindow(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 
                   300, 300, NULL, NULL, NULL, NULL);
 
     while (1) {
