Wine Refined code.

--- a/program/wine/cpp_dlg_window.htm
+++ b/program/wine/cpp_dlg_window.htm
@@ -59,7 +59,7 @@ Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI<
 </p>
 <table>
 <tr><th>API</th></tr>
-<tr><td>HWND CreateWindow(LPCSTR lpClassName, LPCSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam);</td></tr>
+<tr><td>HWND CreateWindow(LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HANDLE hInstance, LPVOID lpParam);</td></tr>
 <tr><td>BOOL GetMessage(LPMSG lpMsg, HWND hWnd, UINT wMsgFilterMin, UINT wMsgFilterMax);</td></tr>
 <tr><td>LRESULT DispatchMessage(const MSG *lpMsg);</td></tr>
 </table><br>
