F(x)tec Pro1 X How to fix font issue in GIMP.

--- a/phone.htm
+++ b/phone.htm
@@ -2098,6 +2098,10 @@ F(x)tec Pro1 X</h3>
     mount directory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_gimp.htm">
+    解決GIMP字型太小的問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_ibus.htm">
     解決IBus選字視窗的位置錯亂問題</a><br>
 
