--- a/phone.htm
+++ b/phone.htm
@@ -2102,6 +2102,10 @@ F(x)tec Pro1 X</h3>
     解決GIMP字型太小的問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_libreoffice.htm">
+    解決LibreOfice字型太小的問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_ibus.htm">
     解決IBus選字視窗的位置錯亂問題</a><br>
 
