Wine How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -396,6 +396,9 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_window.htm">
         Create Window</a><br>
   
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_event.htm">
+        Handle Event</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
