--- a/program/wine/cpp_dlg_window.htm
+++ b/program/wine/cpp_dlg_window.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://learn.microsoft.com/en-us/windows/win32/api/winuser/">win32</a><br>
+1. <a href="http://winapi.freetechsecrets.com/win32/">win32</a><br>
 2. <a href="http://masm32.com/board/index.php?topic=3584.0">masm32</a><br>
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://learn.microsoft.com/en-us/windows/win32/winmsg/window-styles">window-styles</a><br>
