Wine Refined code.

--- a/program.htm
+++ b/program.htm
@@ -394,11 +394,11 @@ Wine</h3>
 
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_window.htm">
-        Create Window</a><br>
+        Window</a><br>
   
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_event.htm">
-        Handle Event</a><br>
+        Event</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
