--- a/program/wine/cpp_dlg_event.htm
+++ b/program/wine/cpp_dlg_event.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Handle Event</b></p>
+<p><b>Event</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
