--- a/program.htm
+++ b/program.htm
@@ -399,6 +399,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_event.htm">
         Event</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_brush.htm">
+        Brush</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
