--- a/program.htm
+++ b/program.htm
@@ -403,6 +403,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_brush.htm">
         Brush</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_pen.htm">
+        Pen</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
