Wine How to use rectangle when painting.

--- a/program.htm
+++ b/program.htm
@@ -407,6 +407,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_pen.htm">
         Pen</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_rectangle.htm">
+        Rectangle</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
