Wine How to use ellipse when painting.

--- a/program.htm
+++ b/program.htm
@@ -411,6 +411,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_rectangle.htm">
         Rectangle</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_ellipse.htm">
+        Ellipse</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
