Wine How to use polygon when painting.

--- a/program.htm
+++ b/program.htm
@@ -415,6 +415,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_ellipse.htm">
         Ellipse</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_polygon.htm">
+        Polygon</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
