Wine How to draw arc when painting.

--- a/program.htm
+++ b/program.htm
@@ -419,6 +419,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_polygon.htm">
         Polygon</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_arc.htm">
+        Arc</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
