Wine Refined code.

--- a/program/wine/cpp_dlg_event.htm
+++ b/program/wine/cpp_dlg_event.htm
@@ -114,7 +114,7 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_event/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
