Wine Refined code and an example to show how to use chord when painting.

--- a/program/wine/cpp_dlg_arc.htm
+++ b/program/wine/cpp_dlg_arc.htm
@@ -54,6 +54,9 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
+Arc使用方式如下：<br>
+<img src="cpp_dlg_arc/2.jpg" class="maxSize"><br><br>
+
 說明：
 </p>
 <table>
