--- a/program/wine/cpp_dlg_chord.htm
+++ b/program/wine/cpp_dlg_chord.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Ellipse</b></p>
+<p><b>Chord</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -54,14 +54,14 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-Ellipse使用方式如下：<br>
-<img src="cpp_dlg_ellipse/2.jpg" class="maxSize"><br><br>
+Chord使用方式如下：<br>
+<img src="cpp_dlg_chord/2.jpg" class="maxSize"><br><br>
 
 說明：
 </p>
 <table>
 <tr><th>API</th></tr>
-<tr><td>BOOL Ellipse(HDC hdc, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect);</td></tr>
+<tr><td>BOOL Chord(HDC hdc, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect, int nXRadial1, int nYRadial1, int nXRadial2, int nYRadial2);</td></tr>
 </table><br>
 
 <p>
@@ -86,7 +86,7 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         HBRUSH brush = CreateSolidBrush(RGB(0x00, 0xff, 0x00));
         SelectObject(hdc, pen);
         SelectObject(hdc, brush);
-        Ellipse(hdc, 10, 10, 200, 200);
+        Chord(hdc, 10, 10, 200, 200, 0, 0, 200, 100);
         EndPaint(hWnd, &amp;ps);
         DeleteObject(pen);
         DeleteObject(brush);
@@ -118,7 +118,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_ellipse/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_chord/1.jpg" class="maxSize">
 </p>
 
 <p>
