--- a/program.htm
+++ b/program.htm
@@ -431,6 +431,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_arc.htm">
         Arc</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_chord.htm">
+        Chord</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
