--- a/program.htm
+++ b/program.htm
@@ -435,6 +435,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_chord.htm">
         Chord</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_pie.htm">
+        Pie</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
