Wine How to create font.

--- a/program.htm
+++ b/program.htm
@@ -439,6 +439,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_pie.htm">
         Pie</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_font.htm">
+        Font</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
