--- a/program.htm
+++ b/program.htm
@@ -443,6 +443,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_font.htm">
         Font</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_text.htm">
+        Text</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
