Wine How to get key value.

--- a/program.htm
+++ b/program.htm
@@ -447,6 +447,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_text.htm">
         Text</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_keyboard.htm">
+        Keyboard</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
