Wine Refined code.

--- a/program.htm
+++ b/program.htm
@@ -451,6 +451,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_keyboard.htm">
         Keyboard</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_mouse.htm">
+        Mouse</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
