--- a/program/wine/cpp_dlg_mouse.htm
+++ b/program/wine/cpp_dlg_mouse.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Keyboard</b></p>
+<p><b>Mouse</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -54,8 +54,15 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-WM_KEYDOWN、WM_KEYUP是一般鍵盤按鍵事件，而WM_SYSKEYDOWN、WM_SYSKEYUP則是屬於系統按鍵的事件，系統按鍵就是左上角小視窗圖案的那些按鍵命令。<br><br>
+WM_MOUSEMOVE
+</p>
+<pre>
+fwKeys = wParam; // key flags
+xPos = LOWORD(lParam); // horizontal position of cursor
+yPos = HIWORD(lParam); // vertical position of cursor
+</pre><br>
 
+<p>
 說明：
 </p>
 <table>
@@ -79,9 +86,8 @@ char buf[255] = {0};
 LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
     switch (uMsg) {
-    case WM_KEYDOWN:
-    case WM_SYSKEYDOWN:
-        sprintf(buf, "key: %d", (int)wParam);
+    case WM_MOUSEMOVE:
+        sprintf(buf, "%d, %d, %d", LOWORD(lParam), HIWORD(lParam), (int)wParam);
         InvalidateRect(hWnd, NULL, true);
         break;
     case WM_CLOSE:
@@ -129,7 +135,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_keyboard/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_mouse/1.jpg" class="maxSize">
 </p>
 
 <p>
