Wine How to use timer.

--- a/program.htm
+++ b/program.htm
@@ -455,6 +455,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_mouse.htm">
         Mouse</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_timer.htm">
+        Timer</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
