Wine How to register customized class.

--- a/program.htm
+++ b/program.htm
@@ -459,6 +459,10 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_dlg_timer.htm">
         Timer</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_class.htm">
+        RegisterClass</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
