Wine Refined code.

--- a/program.htm
+++ b/program.htm
@@ -460,9 +460,12 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_timer.htm">
         Timer</a><br>
         
+      &emsp;&emsp;&oplus;
+      Single Document Interface (SDI)<br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/wine/cpp_dlg_class.htm">
-        RegisterClass</a><br>
+        <a href="program/wine/cpp_sdi_event.htm">
+        Event</a><br>
 <br><br><br><br>
   
 <div id="fasm"></div>
