--- a/program/wine/cpp_sdi_event.htm
+++ b/program/wine/cpp_sdi_event.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>RegisterClass</b></p>
+<h3>Wine &gt;&gt; C/C++ &gt;&gt; Single Document Interface (SDI)</h3>
+<p><b>Event</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -53,8 +53,6 @@
 2. <a href="https://www-user.tu-chemnitz.de/~heha/petzold/ch05d.htm">petzold</a><br>
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
-
-相較於系統預設的Class(WC_DIALOG)，自定義的Class擁有更多設定選項，而值得注意的地方是，預設事件處理副程式改成DefWindowProc()<br><br>
 
 說明：
 </p>
@@ -110,7 +108,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_class/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_sdi_event/1.jpg" class="maxSize">
 </p>
 
 <p>
