--- a/handheld.htm
+++ b/handheld.htm
@@ -68,7 +68,7 @@
   <li><a href="reverse.htm">
   <span class="big">逆</span>向工程</a></li>
   <li><a href="index.htm">
-  <span class="big">關</span>於網站</a></li>
+  <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
 <div id="page">
