--- a/index.htm
+++ b/index.htm
@@ -68,25 +68,10 @@
   <li><a href="reverse.htm">
   <span class="big">逆</span>向工程</a></li>
   <li><a href="index.htm" class="here">
-  <span class="big">關</span>於網站</a></li>
+  <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
 <div id="page">
-<br><br>
-<p>
-架設一個教學網站，一直以來都是司徒的最大心願，雖然司徒心中常常想著如何建造此網站，但是，司徒也是一個相當懶惰的人，所以這個計畫就這樣隨著時間一直耽擱著，如今司徒慢慢體認到，人生短短數十載，做一些有意義的事情，或許會更實際一點，終於讓司徒有了那樣的衝動！所以司徒心想，自己就慢慢的編輯，工作之餘，就慢慢的來寫這個網站，希望可以把自己知道的一些經驗知識，分享給大家，也算是盡自己的一份棉薄之力，回饋於社會。<br><br>
-
-這一個教學網站並不提供討論區，原因在於，司徒看到網路上有很多的討論區，為了讓大家勇於發言、閱讀機密資料或者下載檔案，採取許多措施，結果，很多人都是敷衍的亂發言，目的可能都只是為了賺取點數，一窺所謂的機密資料，最後，大家會發現，其實這些文件或者檔案，都是抄襲或者竊取其他作者的東西！說實話，司徒還真不知這樣的網站有何實際意義？而這樣的現象，也讓司徒心有所感，因此，司徒希望自己的網站不要有討論版面，避免這樣的亂象持續下去，雖然這樣無法讓大家交流，司徒也只能說聲抱歉並盡量將所學寫在此網站上，希望對大家有幫助。<br><br>
-
-司徒的語言造詣相當不好，因此，錯字難免，請見諒！而為了讓使用者可以更簡潔閱讀相關程式碼，相關註解和Error-Handling都會移掉，方便使用者閱讀，然而在實際工作的專案中，司徒建議大家，在撰寫程式碼時，培養自己寫個簡單明瞭(盡量不要使用縮寫的相關詞彙)且有意義的註解說明，會讓程式的維護更方便，也可以訓練自己的語意表達方式，而Error-Handling的好壞也是決定一個產品品質的關鍵因素，當然要面臨的效能、時效以及維護問題，也是一門大學問，使用者應該多花時間在關注這樣的課題上，才能讓自己更上一層樓，而關於文章中的錯字部份，司徒也會盡量多次審閱校訂，藉以提供良好的閱讀品質，子網頁更新是很常態的一件事情，網址有時也會一起變更，因此，建議每次都從首頁進入，造成不便，請多包涵。<br><br>
-
-<b>重要記事</b><br>
-2021：網站文章數量達2500頁<br>
-2013：網站搬遷至GitHub<br>
-2003：於亞卓市創立司徒的教學網站<br><br>
-
-<img style="vertical-align: middle;" src="img/bg/lk.png"></img> <a href="https://www.linkedin.com/in/steward-fu-1428a0138/">Steward</a><br>
-<img style="vertical-align: middle;" src="img/bg/gmail.png"></img> steward.fu@gmail.com
 </p><br>
 
 </div>
