--- a/program.htm
+++ b/program.htm
@@ -668,6 +668,10 @@ High Level Assembly (HLA)</h3>
   &emsp;&emsp;&lowast;
   <a href="program/hla/x64_hello.htm">
   hello, world!</a><br>
+
+&lowast;
+<a href="program/hla/fix_flex.htm">
+解決"flex: input rules are too complicated (>= 32000 NFA states)"問題</a><br>
 <br><br><br><br>
 
 <div id="sasm"></div>
