Sailfish OS How to prepare developing environment under debian x64.

--- a/system.htm
+++ b/system.htm
@@ -80,6 +80,7 @@
   <a href="#docker"><img src="img/photos/docker.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Docker"/></a>
   <a href="#podman"><img src="img/photos/podman.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Podman"/></a>
   <a href="#kube"><img src="img/photos/kube.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Kubernetes"/></a>
+  <a href="#sailfish"><img src="img/photos/sailfish.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sailfish OS"/></a>
 </p>
 </div>
 
@@ -499,6 +500,16 @@ Kubernetes</h3>
 	&emsp;&emsp;&lowast;
 	<a href="system/kube/cve-2022-0847.htm">
 	CVE-2022-0847</a><br>
+<br><br><br><br>
+
+<div id="sailfish"></div>
+<h3><img src="img/photos/sailfish.jpg" class="floatLeft"/>
+Sailfish OS</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="system/sailfish/setup.htm">
+安裝環境</a><br>
 <br><br><br><br>
 
 </p>
