--- a/phone.htm
+++ b/phone.htm
@@ -2075,6 +2075,10 @@ F(x)tec Pro1 X</h3>
   如何擴展home.img空間成256GB</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/fix_gallery.htm">
+  解決Gallery圖片無法刪除了問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/so_build_kernel.htm">
   build kernel 4.19.157</a><br>
 
