--- a/phone/pro1x/screenshot.htm
+++ b/phone/pro1x/screenshot.htm
@@ -48,8 +48,17 @@
 <p><b>如何screenshot</b></p>
 <hr size="1">
 <p>
-同時按住音量上鍵和上鍵，一秒後即可擷取畫面
+參考資訊：<br>
+1. <a href="https://docs.sailfishos.org/Support/Help_Articles/Tips_and_Tricks/#taking-screenshots-screen-captures">taking-screenshots-screen-captures</a><br><br>
+
+方式一：同時按住音量上鍵和上鍵，一秒後即可擷取畫面<br>
+方式二：
 </p>
+<pre>
+$ devel-su -p dbus-send --session --print-reply --dest=org.nemomobile.lipstick \
+    /org/nemomobile/lipstick/screenshot org.nemomobile.lipstick.saveScreenshot \
+    string:"/home/defaultuser/Pictures/Screenshots/Screenshot-$(date +%y-%m-%d-%H-%M-%S).png"
+</pre><br>
 
 <p>
 <br><a href="../../phone.htm">返回上一頁</a>
