F(x)tec Pro1 X How to install storeman under sailfish.

--- a/phone.htm
+++ b/phone.htm
@@ -2071,6 +2071,10 @@ F(x)tec Pro1 X</h3>
   如何screenshot</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/storeman.htm">
+  如何安裝storeman</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/pro1x/resize_home.htm">
   如何擴展home.img空間成256GB</a><br>
 
