Trip Added Italy pages.

--- a/index.htm
+++ b/index.htm
@@ -72,7 +72,37 @@
 </ul>
 
 <div id="page">
-</p><br>
+<br><br>
+<p>
+  <a href="#italy"><img src="img/photos/italy.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="義大利"/></a>
+</p>
+</div>
+
+<div id="page">
+<br><br>
+<p>
+<div id="italy"></div>
+<h3><img src="img/photos/italy.jpg" class="floatLeft"/>
+義大利</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="trip/italy/rome.htm">
+羅馬</a><br>
+
+&lowast;
+<a href="trip/italy/firenze.htm">
+佛羅倫斯</a><br>
+
+&lowast;
+<a href="trip/italy/venezia.htm">
+威尼斯</a><br>
+
+&lowast;
+<a href="trip/italy/milano.htm">
+米蘭</a><br>
+<br><br><br><br>
+</p>
 
 </div>
 </div>
