--- a/trip/italy/firenze.htm
+++ b/trip/italy/firenze.htm
@@ -45,11 +45,11 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>義大利</h3>
+<h3>義大利 &gt;&gt; 2023-01</h3>
 <p><b>佛羅倫斯</b></p>
 <hr size="1">
 <p>
-行程表：<br>
+行程表(<b>熱門的門票記得先從網路購買</b>)：<br>
 <img src="firenze/1.jpg" class="maxSize"><br><br>
 </p>
 
