--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -45,14 +45,43 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>義大利</h3>
+<h3>義大利 &gt;&gt; 2023-01</h3>
 <p><b>羅馬</b></p>
 <hr size="1">
 <p>
-行程表：<br>
+行程表(<b>熱門的門票記得先從網路購買</b>)：<br>
 <img src="rome/1.jpg" class="maxSize"><br><br>
 
 由於肥豬媽(太座)相當喜愛自由行，因此，行程都是自己安排，加上司徒跟肥豬媽兩個人都不會開車，多數行程都是走路為主，而搭載的交通工具也是以捷運、地鐵為主，司徒心想這樣的行程規劃如果可以分享給需要的朋友，那將會是一件相當不錯的事情，雖然司徒多次說服肥豬媽提筆紀錄下這些事情，可惜肥豬媽只當做耳邊風，而司徒的文筆不好、語言不好、拍照技術也不好，加上有嚴重的路癡鬼打牆症狀，因此，這些旅遊紀錄的素材，都是由肥豬媽親自製作跟拍攝，司徒也深怕提字會破壞整體美感，所以會盡量少寫一些文字，盡量把這些旅遊的過程，以照片的方式記錄下來，希望將來有一天，可以好好的回憶一下這些美好的旅程～<br><br>
+
+在每次的自由行中，司徒唯一可以發揮專長的地方就是購買上網SIM卡以及提行李，由於大量使用Google地圖導航，加上不想使用離線下載地圖，因此，上網吃到飽(不能降速度)就是司徒挑選的目標，司徒上網找了幾家可以購買歐洲SIM卡的賣家，發現只有<a href="https://djbcard.com/product/card_europe/">DJB</a>有販賣上網吃到飽且不降速度的SIM卡，雖然價格有點小貴，不過倒是符合司徒的需求<br>
+<img src="rome/2.jpg" class="maxSize"><br>
+在整個義大利旅遊過程，上網速度都算是相當不錯，蠻多機會都可以自動切換到5G使用，唯一發現比較納悶的地方是，義大利室內訊號普遍不好，幾乎都是沒訊號或者切換到Edge使用～<br><br>
+
+飛機的部份，司徒跟肥豬媽並沒有選擇直飛米蘭，而是選擇比較便宜的轉機方式，從<b>台北松山 &gt; 日本羽田 &gt; 德國法蘭克福 &gt; 義大利羅馬</b>，羽田機場到法蘭克福機場約需要12小時的航行時間，由於司徒在飛機上起身走動的次數比較少，最後導致屁股超痛，似乎是邁入更年期的症狀？而海關的檢查點是在法蘭克福機場，所以到達羅馬機場後，就可以直接出關，司徒跟肥豬媽是在羅馬機場購買express車票到羅馬中央車站(Roma Termini)<br>
+<img src="rome/3.jpg" class="maxSize"><br><br>
+
+由於司徒跟肥豬媽住的飯店就在中央車站附近，因此，check-in後就開始羅馬的行程，而隨處可見的古蹟是羅馬的一大特色，更讓司徒驚訝的是，很多馬路並沒有紅綠燈，但是，車子會優先禮讓行人通行<br>
+<img src="rome/4.jpg" class="maxSize"><br><br>
+
+人民廣場(Piazza del Popolo)<br>
+<img src="rome/5.jpg" class="maxSize"><br><br>
+
+基吉小堂(Cappella Chigi)<br>
+<img src="rome/6.jpg" class="maxSize"><br>
+<img src="rome/7.jpg" class="maxSize"><br>
+<img src="rome/8.jpg" class="maxSize"><br>
+<img src="rome/9.jpg" class="maxSize"><br><br>
+
+雕塑咖啡(Canova Tadolini)，座位旁邊全是雕塑作品，喝起咖啡頗有壓力...<br>
+<img src="rome/10.jpg" class="maxSize"><br>
+<img src="rome/11.jpg" class="maxSize"><br>
+<img src="rome/12.jpg" class="maxSize"><br><br>
+
+西班牙廣場(Piazza di Spagna)，有蠻多警察在巡邏，看到就讓人比較心安，雖然網路說義大利扒手很多，不過，在此次義大利旅行中，很幸運地，並沒有遇到東西被偷，不過，當有人靠近時，司徒跟肥豬媽都會特別注意一下背包<br>
+<img src="rome/13.jpg" class="maxSize"><br>
+<img src="rome/14.jpg" class="maxSize"><br><br>
+
 </p>
 
 <p>
