F(x)tec Pro1 X Fix gtk icon size issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2110,6 +2110,10 @@ F(x)tec Pro1 X</h3>
     解決GIMP字型太小的問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/so_gtkrc.htm">
+    解決gtk icon太小的問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_libreoffice.htm">
     解決LibreOfice字型太小的問題</a><br>
 
